[package]
name = "ringlink-p2p"
description = "RingLink peer-to-peer implementation"
authors = ["boot <boot@ring.link>"]
version = "0.1.0"
edition = "2021"

[dependencies]
ringlink-identity = { path = "../ringlink-identity" }
ringlink-protocol = { path = "../ringlink-protocol" }
ringlink-transport = { path = "../ringlink-transport" }

tokio = { version = "1.42.0", features = ["sync", "io-util", "rt", "rt-multi-thread", "time"] }
thiserror = "2.0.6"
ciborium = "0.2.2"
ciborium-io = "0.2.2"
bytes = "1.9"
tracing = "0.1.40"
serde = { version = "1.0.216", features = ["derive"] }
rand = "0.8.5"
arc-swap = "1.7.1"
rupnp = { version = "2.0.0", optional = true }
futures-util = { version = "0.3.30", optional = true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.52.0"
features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.159" }

[features]
default = ["upnp"]
upnp = ["dep:rupnp", "dep:futures-util"]
